--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "updateSnapshot": "jest --updateSnapshot",
     "coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
     "android:build": "cd android && ./gradlew assembleRelease",
-    "android:install": "cd android && ./gradlew assembleRelease && ./gradlew installRelease",
+    "android:install": "npx jetify && cd android && ./gradlew assembleRelease && ./gradlew installRelease",
     "android:hockeyapp": "cd android && ./gradlew assembleRelease && puck -submit=auto app/build/outputs/apk/app-release.apk",
     "android:devices": "$ANDROID_HOME/platform-tools/adb devices",
     "android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
@@ -26,6 +26,7 @@
     "git-hook": "npm run lint -s && npm run test -s"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.6",
     "apisauce": "^1.1.1",
     "format-json": "^1.0.3",
     "identity-obj-proxy": "^3.0.0",
@@ -41,15 +42,12 @@
     "react-native-device-info": "1.6.1",
     "react-native-gesture-handler": "1.3.0",
     "react-native-i18n": "2.0.14",
-    "react-native-vector-icons": "6.1.0",
-
+    "react-native-safe-area-context": "0.6.4",
+    "react-native-screens": "^2.0.0-alpha.32",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "3.13.0",
     "react-navigation-redux-helpers": "3.0.7",
     "react-navigation-stack": "2.0.16",
-    "@react-native-community/masked-view": "0.1.6",
-    "react-native-safe-area-context": "0.6.4",
-    "react-native-screens": "^2.0.0-alpha.32",
-    
     "react-navigation-tabs": "^2.5.6",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
