--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-i18n": "2.0.14",
     "react-native-safe-area-context": "0.6.4",
     "react-native-screens": "^2.0.0-alpha.32",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "3.13.0",
     "react-navigation-redux-helpers": "3.0.7",
@@ -78,6 +79,7 @@
     "ignite-vector-icons": "1.1.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.57.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "16.9.0",
     "reactotron-react-native": "^4.0.2",
     "reactotron-redux": "^3.1.2",
