--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "react-native-animatable": "^1.3.3",
     "react-native-config": "^0.12.0",
     "react-native-device-info": "1.6.1",
+    "react-native-fast-image": "^8.1.5",
     "react-native-gesture-handler": "1.3.0",
     "react-native-i18n": "2.0.14",
     "react-native-safe-area-context": "0.6.4",
     "react-native-screens": "^2.0.0-alpha.32",
     "react-native-svg": "^12.1.0",
+    "react-native-swiper": "^1.6.0-rc.3",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "3.13.0",
     "react-navigation-redux-helpers": "3.0.7",
