--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@storybook/react-native": "^4.1.11",
     "babel-eslint": "7.1.1",
     "babel-jest": "^24.9.0",
+    "babel-plugin-ignite-ignore-reactotron": "^0.3.0",
     "eslint": "^6.6.0",
     "ignite-andross": "^4.2.0",
     "ignite-animatable": "1.0.2",
