adding customImage to fix image problem

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-fast-image": "^8.1.5",
     "react-native-gesture-handler": "1.3.0",
     "react-native-i18n": "2.0.14",
+    "react-native-image-progress": "^1.1.1",
     "react-native-safe-area-context": "0.6.4",
     "react-native-screens": "^2.0.0-alpha.32",
     "react-native-svg": "^12.1.0",
