--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -128,11 +128,12 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.berage"
+        applicationId "com.fidelisyugita.berage"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -202,3 +203,4 @@ apply from: file("../../node_modules/@react-native-community/cli-platform-androi
 
 // by me
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+apply plugin: 'com.google.gms.google-services'
