--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "git-hook": "npm run lint -s && npm run test -s"
   },
   "dependencies": {
+    "@react-native-community/google-signin": "^4.0.2",
     "@react-native-community/masked-view": "0.1.6",
+    "@react-native-firebase/app": "^7.0.0",
+    "@react-native-firebase/auth": "^7.0.0",
     "apisauce": "^1.1.1",
     "format-json": "^1.0.3",
     "identity-obj-proxy": "^3.0.0",
@@ -126,11 +129,6 @@
       "XMLHttpRequest",
       "FormData",
       "React$Element"
-    ]
-  },
-  "rnpm": {
-    "assets": [
-      "./assets/fonts"
     ]
   }
 }
