--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@react-native-firebase/app": "^7.0.0",
     "@react-native-firebase/auth": "^7.0.0",
     "@react-native-firebase/functions": "^7.0.0",
+    "@react-native-firebase/storage": "^7.0.1",
     "apisauce": "^1.1.1",
     "format-json": "^1.0.3",
     "identity-obj-proxy": "^3.0.0",
@@ -45,9 +46,11 @@
     "react-native-animatable": "^1.3.3",
     "react-native-config": "^0.12.0",
     "react-native-device-info": "1.6.1",
+    "react-native-dropdownalert": "^4.2.1",
     "react-native-fast-image": "^8.1.5",
     "react-native-gesture-handler": "1.3.0",
     "react-native-i18n": "2.0.14",
+    "react-native-image-crop-picker": "^0.29.0",
     "react-native-image-progress": "^1.1.1",
     "react-native-safe-area-context": "0.6.4",
     "react-native-screens": "^2.0.0-alpha.32",
