--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@react-native-firebase/storage": "^7.0.1",
     "apisauce": "^1.1.1",
     "format-json": "^1.0.3",
+    "geolib": "^3.2.1",
     "identity-obj-proxy": "^3.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
@@ -48,6 +49,7 @@
     "react-native-device-info": "1.6.1",
     "react-native-dropdownalert": "^4.2.1",
     "react-native-fast-image": "^8.1.5",
+    "react-native-geolocation-service": "^4.0.2",
     "react-native-gesture-handler": "1.3.0",
     "react-native-i18n": "2.0.14",
     "react-native-image-crop-picker": "^0.29.0",
