--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^9.4.0",
     "react-navigation": "3.13.0",
     "react-navigation-redux-helpers": "3.0.7",
     "react-navigation-stack": "2.0.16",
