--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-fast-image": "^8.1.5",
     "react-native-geolocation-service": "^4.0.2",
     "react-native-gesture-handler": "1.3.0",
+    "react-native-gifted-chat": "^0.16.1",
     "react-native-i18n": "2.0.14",
     "react-native-image-crop-picker": "^0.29.0",
     "react-native-image-progress": "^1.1.1",
