--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@react-native-community/masked-view": "0.1.6",
     "@react-native-firebase/app": "^7.0.0",
     "@react-native-firebase/auth": "^7.0.0",
+    "@react-native-firebase/database": "^7.1.0",
     "@react-native-firebase/functions": "^7.0.0",
     "@react-native-firebase/storage": "^7.0.1",
     "apisauce": "^1.1.1",
