--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@react-native-firebase/auth": "^7.0.0",
     "@react-native-firebase/database": "^7.1.0",
     "@react-native-firebase/functions": "^7.0.0",
+    "@react-native-firebase/messaging": "^7.1.0",
     "@react-native-firebase/storage": "^7.0.1",
     "apisauce": "^1.1.1",
     "format-json": "^1.0.3",
