--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,6 +15,14 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <!-- You will only need to add this meta-data tag, but make sure it's a child of application -->
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyBJNUvEeyxRL64_ylr3pVXg3cpIR1Byc5E"/>
+      
+      <!-- You will also only need to add this uses-libray tag -->
+      <!-- <uses-library android:name="org.apache.http.legacy" android:required="false"/> -->
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
