--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-i18n": "2.0.14",
     "react-native-image-crop-picker": "^0.29.0",
     "react-native-image-progress": "^1.1.1",
+    "react-native-maps": "0.27.1",
     "react-native-safe-area-context": "0.6.4",
     "react-native-screens": "^2.0.0-alpha.32",
     "react-native-svg": "^12.1.0",
