--- a/package.json
+++ b/package.json
@@ -55,10 +55,12 @@
     "react-native-geolocation-service": "^4.0.2",
     "react-native-gesture-handler": "1.3.0",
     "react-native-gifted-chat": "^0.16.1",
+    "react-native-google-maps-directions": "^2.1.1",
     "react-native-i18n": "2.0.14",
     "react-native-image-crop-picker": "^0.29.0",
     "react-native-image-progress": "^1.1.1",
     "react-native-maps": "0.27.1",
+    "react-native-open-maps": "^0.3.5",
     "react-native-safe-area-context": "0.6.4",
     "react-native-screens": "^2.0.0-alpha.32",
     "react-native-svg": "^12.1.0",
