--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "git-hook": "npm run lint -s && npm run test -s"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^1.1.2",
     "@react-native-community/geolocation": "^1.4.2",
     "@react-native-community/google-signin": "^4.0.2",
     "@react-native-community/masked-view": "0.1.6",
